Ran prod build.

--- a/src/app/components/pages/home-page.component.html
+++ b/src/app/components/pages/home-page.component.html
@@ -8,15 +8,10 @@
     <div class="mt-5 mb-5">
       <search-form-a></search-form-a>
     </div>
-    <div class="row">
-      <!-- <div class="col-12 text-center">
-        <small style="color: white">Foto: <a href="#">Tatayaki</a>, San Salvador</small>
-      </div> -->
-    </div>
   </div>
 </section>
 
-<section class="container pt-5">
+<section class="container pt-5 pb-5">
   <div class="row">
     <div class="col-12 col-sm-12 col-md-8">
       <h2>La aplicación urbana de Centroamerica y el Caribe</h2>
@@ -25,23 +20,47 @@
   </div>
 </section>
 
-<div class="container mt-2 mb-2">
-  <div class="row">
-    <div class="col-12">
-      <hr>
-    </div>
-  </div>
-</div>
-
 <section class="container pb-5">
   <div class="row">
-    <div class="col-12 col-sm-6">
-      <h3>Lugares Populares</h3>
-      <p></p>
-    </div>
-    <div class="col-12 col-sm-6">
-      <h3>Ciudades Populares</h3>
-      <p>Las ciudades adonde mayor accion hay en este momento. Pellentesque ac lorem ut nunc elementum pulvinar ac nec diam. Interdum et malesuada fames ac ante ipsum primis in faucibus. </p>
+    <div class="col-12">
+      <div class="row">
+        <div class="col-12 col-sm-6 col-md-4">
+          <h3>
+            <a routerLink="">Ciudad de Guatemala</a>
+          </h3>
+          <p>La ciudad de Guatemala, cuyo nombre oficial es Nueva Guatemala de la Asunción, es la capital y sede de los poderes gubernamentales de la República de Guatemala, así como sede del Parlamento Centroamericano.</p>
+        </div>
+        <div class="col-12 col-sm-6 col-md-4">
+          <h3>
+            <a routerLink="">San Salvador</a>
+          </h3>
+          <p>San Salvador es la capital de la República de El Salvador y la cabecera del departamento y municipio homónimos.</p>
+        </div>
+        <div class="col-12 col-sm-6 col-md-4">
+          <h3>
+            <a routerLink="">Tegucigalpa</a>
+          </h3>
+          <p>Tegucigalpa, oficialmente Tegucigalpa, Municipio del Distrito Central y abreviado como Tegucigalpa, M. D. C., es la capital y sede de gobierno de la República de Honduras, junto a su ciudad gemela Comayagüela.</p>
+        </div>
+        <div class="col-12 col-sm-6 col-md-4">
+          <h3>
+            <a routerLink="">Managua</a>
+          </h3>
+          <p>Managua es la ciudad capital de Nicaragua y cabecera del municipio y departamento homónimos, así como la sede del gobierno y los poderes del Estado.</p>
+        </div>
+        <div class="col-12 col-sm-6 col-md-4">
+          <h3>
+            <a routerLink="">San José</a>
+          </h3>
+          <p>San José es la capital de la República de Costa Rica y la cabecera de la provincia del mismo nombre.</p>
+        </div>
+        <div class="col-12 col-sm-6 col-md-4">
+          <h3>
+            <a routerLink="">Ciudad de Panamá</a>
+          </h3>
+          <p>Panamá es la capital de la República de Panamá, de la provincia de Panamá y cabecera del distrito homónimo.</p>
+        </div>
+      </div>
     </div>
   </div>
 </section>
