--- a/src/app/components/places/place-card.component.html
+++ b/src/app/components/places/place-card.component.html
@@ -1,9 +1,9 @@
 <div class="card-body">
   <div class="row">
-    <div class="col-4 col-sm-2">
-      <!-- <img alt="Foto de {{place.content.name}}" class="card-img-left img-fluid" *ngIf="place.img" [src]="place.img.src"> -->
-    </div>
-    <div class="col-8 col-sm-6">
+    <!-- <div class="col-4 col-sm-2">
+      <img alt="Foto de {{place.content.name}}" class="card-img-left img-fluid" *ngIf="place.img" [src]="place.img.src">
+    </div> -->
+    <div class="col-8 col-sm-8">
       <h2 class="card-title h4">
         <a routerLink="/lugar/{{place.system.id}}">{{place.content.name}}</a>
       </h2>
