--- a/src/app/components/places/place-detail.component.html
+++ b/src/app/components/places/place-detail.component.html
@@ -6,21 +6,9 @@
         <li class="nav-item">
           <a class="nav-link active" id="list-tab" data-toggle="tab" href="#info" role="tab" aria-controls="info" aria-selected="true">
             <i class="material-icons md-18 align-top">subject</i>
-            <span class="d-none d-sm-none d-md-inline d-lg-inline d-xl-inline">&nbsp;Informacion</span>
+            <span class="d-none d-sm-none d-md-inline d-lg-inline d-xl-inline">&nbsp;Información</span>
           </a>
         </li>
-        <!-- <li class="nav-item">
-          <a class="nav-link" id="map-tab" data-toggle="tab" href="#map" role="tab" aria-controls="map" aria-selected="false">
-            <i class="material-icons md-18 align-top">public</i>
-            <span class="d-none d-sm-none d-md-inline d-lg-inline d-xl-inline">&nbsp;Mapa</span>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" id="map-tab" data-toggle="tab" href="#edit" role="tab" aria-controls="edit" aria-selected="false">
-            <i class="material-icons md-18 align-top">create</i>
-            <span class="d-none d-sm-none d-md-inline d-lg-inline d-xl-inline">&nbsp;Editar</span>
-          </a>
-        </li> -->
       </ul>
     </div>
   </div>
