--- a/src/app/components/places/place-list.component.html
+++ b/src/app/components/places/place-list.component.html
@@ -1,6 +1,8 @@
 <!-- <filter-places-form (priceChanged)="filterByPrice($event)" (pricePredicateChanged)="handlePricePredicateChanged($event)"></filter-places-form> -->
 
-<div class="container mt-5 mb-5" *ngIf="places$ | async as places">
+<div class="container mt-5 mb-5" *ngIf="places$ | async as places; else loading">
+
+  <ng-template #loading>Loading User Data...</ng-template>
 
   <div class="row d-block d-sm-block d-md-none d-lg-none d-xl-none mb-5">
     <div class="col-12">
@@ -10,11 +12,11 @@
             <i class="material-icons md-18 align-top">list</i>
           </a>
         </li>
-        <!-- <li class="nav-item">
+        <li class="nav-item">
           <a class="nav-link" id="map-tab" data-toggle="tab" href="#map" role="tab" aria-controls="profile" aria-selected="false">
             <i class="material-icons md-18 align-top">public</i>
           </a>
-        </li> -->
+        </li>
       </ul>
     </div>
   </div>
