Ran prod build.

--- a/src/app/components/categories/categories-list.component.html
+++ b/src/app/components/categories/categories-list.component.html
@@ -8,7 +8,7 @@
             <i class="material-icons md-18 align-top white">{{category.iconId}}</i>
           </div>
           <h3 class="card-title h5">
-            <a routerLink="/busqueda" [queryParams]="{categoria: category.name}">{{category.name}}</a>
+            <a routerLink="/lugares" [queryParams]="{categoria: category.name}">{{category.name}}</a>
           </h3>
           <p class="card-text">{{category.summary}}</p>
           <p class="card-text"><small class="text-muted">{{category.listings}} lugares</small></p>
