--- a/src/app/components/places/place-card-featured.component.html
+++ b/src/app/components/places/place-card-featured.component.html
@@ -13,8 +13,8 @@
       </div>
       <span>$$$&nbsp;|&nbsp;</span>
       <span class="card-subtitle mb-2 text-muted">
-        <a href="#" routerLink="/busqueda">Steakhouses</a>,&nbsp;
-        <a href="#" routerLink="/busqueda">Mariscos</a>
+        <a href="#" routerLink="/lugares">Steakhouses</a>,&nbsp;
+        <a href="#" routerLink="/lugares">Mariscos</a>
       </span>
     </div>
     <div class="col-12">
