--- a/src/app/components/forms/search-form-a.component.html
+++ b/src/app/components/forms/search-form-a.component.html
@@ -32,7 +32,9 @@
              placeholder="¿Adonde? San Salvador, Panamá"
              formControlName="location" />
       <span class="input-group-btn">
-        <button type="submit" class="btn btn-primary" routerLink="/busqueda"><i class="material-icons md-14">search</i></button>
+        <button type="submit" class="btn btn-primary" routerLink="/lugares">
+          <i class="material-icons md-14">search</i>
+        </button>
       </span>
     </div>
   </div>
