--- a/src/app/components/forms/search-form-b.component.html
+++ b/src/app/components/forms/search-form-b.component.html
@@ -5,7 +5,7 @@
         <input aria-label="Search for..." class="form-control form-control-sm" formControlName="term" placeholder="¿Que? Restaurantes, La Gastroteca" type="text">
         <input aria-label="Search for..." class="form-control form-control-sm" formControlName="location" placeholder="¿Adonde? San Salvador, Panama" type="text">
         <span class="input-group-btn">
-          <button type="submit" class="btn btn-primary btn-sm" routerLink="/busqueda">
+          <button type="submit" class="btn btn-primary btn-sm" routerLink="/lugares">
             <i class="material-icons md-14">search</i>
           </button>
         </span>
