--- a/src/app/components/menus/breadcrumb-menu.component.html
+++ b/src/app/components/menus/breadcrumb-menu.component.html
@@ -1,13 +1,13 @@
 <ol class="breadcrumb">
   <li class="breadcrumb-item d-none d-sm-none d-md-inline d-lg-inline d-xl-inline">
-    <a routerLink="/busqueda" [queryParams]="{lugar: country | lowercase}">{{country}}</a>
+    <a routerLink="/lugares" [queryParams]="{lugar: country | lowercase}">{{country}}</a>
   </li>
   <li class="breadcrumb-item">
-    <a routerLink="/busqueda" [queryParams]="{lugar: city | lowercase}">{{city}}</a>
+    <a routerLink="/lugares" [queryParams]="{lugar: city | lowercase}">{{city}}</a>
   </li>
   <!-- <li class="breadcrumb-item active">
     <ng-container *ngFor="let subcategory of subcategories">
-      <a routerLink="/busqueda">{{subcategory}}, </a>
+      <a routerLink="/lugares">{{subcategory}}, </a>
     </ng-container>
   </li> -->
 </ol>
