Added name to place detail URI. Some corrected typos. Better gitignore.

--- a/src/app/components/pages/home-page.component.html
+++ b/src/app/components/pages/home-page.component.html
@@ -14,7 +14,7 @@
 <section class="container pt-5 pb-5">
   <div class="row">
     <div class="col-12 col-sm-12 col-md-8">
-      <h2>La aplicación urbana de Centroamerica y el Caribe</h2>
+      <h2>La aplicación urbana de Centroamérica y el Caribe</h2>
       <p>Sipi te permite interactuar con tus ciudades como nunca antes posible.</p>
     </div>
   </div>
