--- a/src/app/components/places/place-detail.component.html
+++ b/src/app/components/places/place-detail.component.html
@@ -1,5 +1,5 @@
 <!-- <main class="container mt-5 mb-5" *ngIf="place"> -->
-<main class="container mt-5 mb-5" *ngIf="place$ | async as place; else loading">
+<main class="container mt-5 mb-5" *ngIf="(place$ | async) as place; else loading">
 
   <div class="row mb-5">
     <div class="col-12">
