Work towards business logic and display of branches.

--- a/src/app/components/places/place-detail-profile.component.html
+++ b/src/app/components/places/place-detail-profile.component.html
@@ -38,4 +38,20 @@
       </div>
     </div>
   </div>
+
+  <!-- branches -->
+  <div class="col-12 col-sm-6">
+    <ul class="list-group">
+      <li class="list-group-item" *ngFor="let branch of branches">
+        <h3 class="h4">
+          <a routerLink="/lugar/{{branch.system.id}}/{{branch.organizational.parentName}}-{{branch.content.slug}}">{{branch.content.name}}</a>
+        </h3>
+        <address class="card-text">
+          {{branch.address.number}}, {{branch.address.street}}<br>
+          {{branch.address.city}}, {{branch.address.country}}<br>
+        </address>
+      </li>
+    </ul>
+  </div>
+
 </div>
