--- a/src/app/components/places/place-detail.component.html
+++ b/src/app/components/places/place-detail.component.html
@@ -30,7 +30,7 @@
     <div class="col-12">
       <div class="tab-content" id="place-tab-content">
         <div class="tab-pane fade show active" id="info">
-          <place-detail-profile [place]="place"></place-detail-profile>
+          <place-detail-profile [place]="place" [branches]="branches"></place-detail-profile>
         </div><!-- info section -->
         
         <div class="tab-pane fade" id="edit">
