--- a/src/app/components/places/place-list.component.html
+++ b/src/app/components/places/place-list.component.html
@@ -23,7 +23,7 @@
     <div class="col-12 col-sm-12 col-md-7 tab-pane fade show active" id="list">
 
       <!-- <sort-places-form (predicateChanged)="handlePredicateChanged($event)"></sort-places-form> -->
-      <div class="border-top-0 border-left-0 border-right-0 card mb-4" *ngFor="let place of places | orderBy: orderPredicate: reverseOrder | paginate: { itemsPerPage: 10, currentPage: p }">
+      <div class="card mb-4" *ngFor="let place of places | orderBy: orderPredicate: reverseOrder | paginate: { itemsPerPage: 10, currentPage: p }">
         <!-- <ng-template #loading>
             <div class="card-body">
                 <div class="row">
