Changed copyright name to Sipi.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -43,7 +43,7 @@
         </p> -->
         <p>
           <small>
-            <em>Derechos Reservados &copy; 2018 Servicios Integrales Pro Imagen S.A de C.V</em>
+            <em>Derechos Reservados &copy; 2018 SIPI S.A de C.V</em>
           </small>
         </p>
       </div>
