Updated styles for editable marker map.

--- a/src/assets/sass/sipi/maps.scss
+++ b/src/assets/sass/sipi/maps.scss
@@ -8,6 +8,11 @@
   width: 100%;
 }
 
+#editable-marker-map {
+  height: 400px;
+  width: 100%;
+}
+
 // .sticky {
 //   position: -webkit-sticky;  // required for Safari
 //   position: sticky;
