Lots of work on place update form functionality.

--- a/src/app/components/places/place-detail-profile.component.html
+++ b/src/app/components/places/place-detail-profile.component.html
@@ -1,5 +1,8 @@
-<!-- <breadcrumb-menu country="{{place.address.country}}" city="{{place.address.city}}" subcategories="{{place.category.subcats}}"></breadcrumb-menu> -->
-
+<!-- <div class="row">
+  <div class="col-6">
+      <breadcrumb-menu country="{{place.address.country}}" city="{{place.address.city}}" subcategories="{{place.category.subcats}}"></breadcrumb-menu>
+  </div>
+</div> -->
 
 <div class="row mb-4">
   <div class="col-12">
