--- a/src/app/components/places/place-detail-edit.component.html
+++ b/src/app/components/places/place-detail-edit.component.html
@@ -2,10 +2,10 @@
 <div class="col-12 col-sm-12 col-md-12 mt-5 tab-pane fade" id="edit">
   <div class="row">
     <div class="col-8">
-      <edit-place-form [place]="place"></edit-place-form>
+      <update-place-form [place]="place"></update-place-form>
     </div>
     <div class="col-4">
-      
+      <editable-marker-map class="card-img-top" [place]="place"></editable-marker-map>
     </div>
   </div>
 </div>
