--- a/src/app/components/places/cards/place-hours-card-edit.component.html
+++ b/src/app/components/places/cards/place-hours-card-edit.component.html
@@ -85,5 +85,5 @@
       <time itemprop="openingHours" datetime="Mo 16:00-20:00">Domingo 4-8pm</time>
     </li>
   </ul>
-  <button type="button" class="btn btn-success btn-block rounded-0">Block level button</button>
+  <button type="button" class="btn btn-success btn-block rounded-0">Actualizar horario</button>
 </div>
