--- a/src/app/components/places/cards/place-location-card.component.html
+++ b/src/app/components/places/cards/place-location-card.component.html
@@ -27,7 +27,7 @@
   <div class="card-footer text-muted">
     <small>
       Actualizado hace {{place.date.modified | ago}}
-      <a class="card-link" (click)="toggleEdit()"><i class="material-icons md-18 align-top">create</i>&nbsp;Actualizar</a>
+      <!-- <a class="card-link" (click)="toggleEdit()"><i class="material-icons md-18 align-top">create</i>&nbsp;Actualizar</a> -->
     </small>
   </div>
 </div>
