--- a/src/app/components/maps/editable-marker-map.component.html
+++ b/src/app/components/maps/editable-marker-map.component.html
@@ -1,4 +1,4 @@
 <!-- <button class="btn btn-secondary btn-lg btn-block" (click)="redoMapSearch()" type="button">Buscar De Nuevo</button> -->
 <div id="editable-marker-map"></div>
-<small>Tenemos la ubicación incorrecta? Mueve el pin para actualizarla.</small>
-<button type="button" class="btn btn-block btn-primary">Actualizar ubicación</button>
+<!-- <small>Tenemos la ubicación incorrecta? Mueve el pin para actualizarla.</small> -->
+<!-- <button type="button" class="btn btn-block btn-primary" (click)="updatePlaceCoords()">Actualizar ubicación</button> -->
