--- a/src/app/components/menus/main-menu-auth.component.html
+++ b/src/app/components/menus/main-menu-auth.component.html
@@ -15,9 +15,10 @@
           &nbsp;<span class="badge badge-danger">{{user.notifications.unseen}}</span>
         </a> -->
       </div>
-      <div class="grey col-12 col-sm-12 d-md-none d-lg-none d-xl-none">
+      <!-- <div class="grey col-12 col-sm-12 d-md-none d-lg-none d-xl-none">
         <search-form-b class="nav-link"></search-form-b>
-      </div>
+      </div> -->
     </nav>
   </div>
+  <!-- <progress-bar></progress-bar> -->
 </header>
