--- a/src/app/components/users/user-detail-places.component.html
+++ b/src/app/components/users/user-detail-places.component.html
@@ -15,7 +15,7 @@
 
     <div class="row">
       <div class="border-bottom-0 card col-12 col-sm-12 col-md-6 mb-4" *ngFor="let place of places | orderBy: 'createdDate': true">
-        <place-card-simple [place]="place"></place-card-simple>
+        <!-- <place-card-simple [place]="place"></place-card-simple> -->
       </div>
     </div>
   </div>
