--- a/src/app/components/maps/multi-marker-map.component.html
+++ b/src/app/components/maps/multi-marker-map.component.html
@@ -1,4 +1,4 @@
-<button class="btn btn-secondary btn-lg btn-block" (click)="redoSearch.emit('The message')" type="button">
+<!-- <button class="btn btn-secondary btn-lg btn-block" (click)="redoSearch.emit('The message')" type="button">
   <i class="material-icons">cached</i> Rebuscar
-</button>
+</button> -->
 <div id="multi-marker-map"></div>
