--- a/src/app/components/places/place-list.component.html
+++ b/src/app/components/places/place-list.component.html
@@ -32,9 +32,7 @@
 
     <div class="col-12 col-sm-12 col-md-5 tab-pane fade show" id="map">
 
-      <!-- <ng-container *ngFor="let place of places | priceFilter: price | orderBy: orderPredicate: reverseOrder | paginate: { itemsPerPage: 10, currentPage: p }">
-        <multi-marker-map (firstPlace)="handleMarkerClick($event)" (mapBoundsChanged)="handleNewMapBounds($event)" [places]="places"></multi-marker-map>
-      </ng-container> -->
+      <multi-marker-map (selectedPlace)="handleMarkerClick($event)" (mapBoundsChanged)="handleNewMapBounds($event)" [places]="places"></multi-marker-map>
     
     </div>
 
