Brought clicked place reference on to place list.

--- a/src/app/components/places/place-list.component.html
+++ b/src/app/components/places/place-list.component.html
@@ -20,6 +20,12 @@
   </div>
 
   <div class="row">
+    <div class="col">
+      {{selectedPlace}}
+    </div>
+  </div>
+
+  <div class="row">
     <div class="col-12 col-sm-12 col-md-7 tab-pane fade show active" id="list">
 
       <!-- <sort-places-form (predicateChanged)="handlePredicateChanged($event)"></sort-places-form> -->
