Removed output from map, on place list.

--- a/src/app/components/places/place-list.component.html
+++ b/src/app/components/places/place-list.component.html
@@ -19,11 +19,11 @@
     </div>
   </div>
 
-  <div class="row">
+  <!-- <div class="row">
     <div class="col">
       {{selectedPlace}}
     </div>
-  </div>
+  </div> -->
 
   <div class="row">
     <div class="col-12 col-sm-12 col-md-7 tab-pane fade show active" id="list">
